--- a/Booki-Back-end/src/main/resources/application-mysql.properties
+++ b/Booki-Back-end/src/main/resources/application-mysql.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bookidb?useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=glue
+spring.datasource.password=Bitwise@123
+spring.datasource.url= jdbc:mysql://10.20.184.130/booki
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
